# embeddeddb

./: .gitignore  CMakeLists.txt  database.h  main.c
source/: database.c  database.h  main.c
test/: main_test.c  test.c  test.h
test/mx/: common.c  common.h
